--- a/env/requirements.yaml
+++ b/env/requirements.yaml
@@ -1,4 +1,7 @@
 dependencies:
+- name: activiti-cloud-full-example
+  repository: https://activiti.github.io/activiti-cloud-helm-charts/
+  version: 0.0.205
 - alias: expose
   name: exposecontroller
   repository: http://chartmuseum.jenkins-x.io
