--- a/env/requirements.yaml
+++ b/env/requirements.yaml
@@ -2,6 +2,9 @@ dependencies:
 - name: activiti-cloud-full-example
   repository: https://activiti.github.io/activiti-cloud-helm-charts/
   version: 7.1.18
+- name: activiti-cloud-identity-chart
+  repository: http://jenkins-x-chartmuseum:8080
+  version: 0.0.1
 - alias: expose
   name: exposecontroller
   repository: http://chartmuseum.jenkins-x.io
